# brainways

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy.yml  test.yml  test_and_deploy.yml
brainways/: __init__.py  cli.py
data/: test_data.npz
docs/: 01_index.md  02_getting_started.md  03_cell_detection.md  04_best_practices.md  Makefile  brainways.elastix.rst  brainways.pipeline.rst  brainways.project.rst  brainways.rst  brainways.scripts.rst  brainways.transforms.rst  brainways.utils.atlas.rst  brainways.utils.cell_detection_importer.rst  brainways.utils.czi.rst  brainways.utils.io_utils.file_iterators.rst  brainways.utils.io_utils.readers.rst  brainways.utils.io_utils.rst  brainways.utils.rst  cell_detection.md  conf.py  getting_started.md  index.md  index.rst  installation.rst  make.bat  modules.rst  requirements.in  requirements.txt  usage.rst
docs/assets/: .gitignore
src/brainways/: .gitignore  conftest.py  napari.yaml
src/brainways/cell_detectors/: cellpose.py  stardist.py
src/brainways/elastix/: Par0033bspline.txt  Par0033similarity.txt  elastix.py
src/brainways/elastix/_tests/: test_elastix.py
src/brainways/model/: dataset_utils.py  model_utils.py  predict_image.py
src/brainways/model/siamese/: __init__.py  siamese_backbone.py  siamese_model.py
src/brainways/model/transforms/: __init__.py  normalize_percentile.py
src/brainways/pipeline/: affine_2d.py  atlas_registration.py  brainways_params.py  brainways_pipeline.py  cell_detector.py  tps.py
src/brainways/pipeline/_tests/: test_atlas_registration.py  test_brainways_pipeline.py  test_cell_detector.py
src/brainways/project/: _utils.py  brainways_project.py  brainways_project_settings.py  brainways_subject.py  info_classes.py
src/brainways/project/_tests/: conftest.py  test_brainways_project.py  test_brainways_subject.py  test_utils.py
src/brainways/scripts/: batch_create_thumbnails.py  cell_detection.py  cli.py  create_excel.py  create_excel_colabelling.py  create_reg_model_data.py  display_area.py  display_area_2.py  display_area_3.py  import_cell_detections_keren.py  import_cells.py  move_images.py  pls_analysis.py  run_cell_detector.py  run_ui.py  tiff_file_test.ipynb
src/brainways/scripts/_tests/: test_cli.py
src/brainways/transforms/: affine_transform_2d.py  base.py  compose.py  depth_registration.py  identity_transform.py  image_to_atlas_transform.py  tps_transform.py
src/brainways/transforms/_tests/: test_affine_transform_2d.py  test_compose.py  test_depth_registration.py  test_image_to_atlas_transform.py  test_tps_transform.py
src/brainways/ui/: __init__.py  _sample_project.py  brainways_ui.py  conftest.py  napari_reader.py
src/brainways/ui/_tests/: test_brainways_ui.py  test_reader.py  test_sample_project.py
src/brainways/ui/controllers/: affine_2d_controller.py  analysis_controller.py  annotation_viewer_controller.py  base.py  cell_3d_viewer_controller.py  cell_detector_controller.py  registration_controller.py  tps_controller.py
src/brainways/ui/models/: structure_tree_model.py
src/brainways/ui/utils/: async_utils.py  general_utils.py  test_utils.py
src/brainways/ui/widgets/: analysis_widget.py  cell_detector_widget.py  cell_viewer_widget.py  create_subject_dialog.py  registration_widget.py  structure_selection_dialog.py  tps_widget.py  warning_dialog.py  workflow_widget.py
src/brainways/utils/: _imports.py  cell_count_summary.py  cells.py  config.py  contrast.py  data.py  dataclasses.py  export.py  image.py  network_analysis.py  paths.py  pls_analysis.py  preprocess.py  qupath.py  setup.py  test_utils.py  view_brain_structure.py
src/brainways/utils/_tests/: test_cell_count_summary.py  test_cells.py  test_contrast.py  test_data.py  test_export.py  test_image.py  test_network_analysis.py  test_pls_analysis.py  test_setup.py
src/brainways/utils/atlas/: brainways_atlas.py  duracell_atlas.py  slice_atlas.py
src/brainways/utils/cell_detection_importer/: brainways_cell_detection_importer.py  cell_detection_importer.py  keren_cell_detection_importer.py  qupath_cell_detection_importer.py  utils.py
src/brainways/utils/czi/: czi_to_jpg.py
src/brainways/utils/io/: __init__.py  image_path.py
src/brainways/utils/io_utils/: image_path.py
src/brainways_reg_model/cli/: cli.py  prepare_annotation_data.py  prepare_real_data.py  prepare_synth_data.py  view_dataset.py
src/brainways_reg_model/model/: approx_acc.py  atlas_registration_params.py  dataset.py  evaluate.py  metric_dict_input_wrapper.py  model.py  predict.py  predict_qupath.py  train.py
src/brainways_reg_model/slice_generator/: slice_generator.py  slice_generator_sample.py
src/brainways_reg_model/slice_generator/stages/: __init__.py  adjust_contrast.py  crop_material_area.py  (+11 more)
src/brainways_reg_model/utils/: config.py  data.py  image.py  milestones_finetuning.py  paths.py  slice_atlas.py  structure_labels.py
src/napari_brainways/: __init__.py  brainways_ui.py  conftest.py  napari.yaml  napari_reader.py
src/napari_brainways/_tests/: test_brainways_ui.py  test_reader.py  test_sample_project.py  test_widget.py
src/napari_brainways/controllers/: affine_2d_controller.py  analysis_controller.py  annotation_viewer_controller.py  base.py  cell_3d_viewer_controller.py  cell_detector_controller.py  registration_controller.py  tps_controller.py
src/napari_brainways/utils/: async_utils.py
src/napari_brainways/widgets/: affine_2d_widget.py  analysis_widget.py  cell_detector_widget.py  create_subject_dialog.py  registration_widget.py  workflow_widget.py
src/pyls/: __init__.py  _version.py  base.py  compute.py  io.py  structures.py  utils.py
src/pyls/matlab/: __init__.py  io.py
src/pyls/plotting/: meancentered.py
src/pyls/types/: __init__.py  behavioral.py  meancentered.py  regression.py
tests/: __init__.py  test_brainways.py
(+50 files in other folders)
