[project]
name = "brainways"
dynamic = ["version"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/brainways/_version.py"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
line-length = 88
extend-ignore = ["E203", "E501"]
