[metadata]
name = napari-brainways
description = Brainways
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bkntr/brainways
author = Ben Kantor
author_email = benkantor@mail.tau.ac.il
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/bkntr/brainways/issues
    Documentation = https://github.com/bkntr/brainways#README.md
    Source Code = https://github.com/bkntr/brainways
    User Support = https://github.com/bkntr/brainways/issues

[options]
packages = find:
install_requires =
    aicsimageio[base-imageio]
    aicspylibczi>=3.0.5
    bfio
    bg-atlasapi
    bioformats-jar
    brainways-reg-model
    click
    dacite
    datasets==2.15.0
    fsspec>=2022.7.1
    huggingface-hub==0.18.0
    importlib-resources
    itk-elastix==0.16.0
    kornia==0.6.7
    napari[all]==0.4.18
    natsort
    networkx==3.1
    numpy
    opencv-contrib-python-headless
    opencv-python-headless
    openpyxl
    pandas
    paquo==0.6.1
    pingouin==0.5.4
    qtpy==2.3.1
    readlif>=0.6.4
    scikit-image
    scikit-learn
    scikit-posthocs==0.7.0
    stardist==0.8.5
    statsmodels==0.14.0
    tensorflow==2.15.*
    toml
    torch==1.10.*
    torchvision==0.11.*
    tqdm
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    brainways = brainways.scripts.cli:cli
napari.manifest =
    napari-brainways = napari_brainways:napari.yaml

[options.extras_require]
dev =
    pre-commit
testing =
    brainways-reg-model
    py
    pyqt5
    pytest
    pytest-cov
    pytest-qt<4.1.0  # https://pytest-qt.readthedocs.io/en/latest/
    tox

[options.package_data]
* = *.yaml
