[metadata]
name = brainways
description = Brainways
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bkntr/brainways
author = Ben Kantor
author_email = benkantor@mail.tau.ac.il
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/bkntr/brainways/issues
    Documentation = https://github.com/bkntr/brainways#README.md
    Source Code = https://github.com/bkntr/brainways
    User Support = https://github.com/bkntr/brainways/issues

[options]
packages = find:
install_requires =
    aicsimageio[base-imageio]==4.14.0
    aicspylibczi
    brainglobe-atlasapi
    click
    dacite
    datasets
    fsspec
    huggingface-hub
    importlib-resources
    itk-elastix
    kornia
    napari[all]>=0.5.0
    natsort
    networkx
    numpy<2.0.0
    opencv-contrib-python-headless
    opencv-python-headless
    openpyxl
    pandas
    paquo
    qtpy
    scikit-image
    scikit-learn
    scikit-posthocs
    stardist
    statsmodels
    tensorflow
    toml
    torch
    torchvision
    lightning
    tqdm
    scyjava
    jpype1==1.5.0
    albumentations==2.0.5
    jsonargparse>=4.0.0,<5.0.0
    timm>=1.0.0,<2.0.0
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    brainways = brainways.scripts.cli:cli
napari.manifest =
    brainways = brainways:napari.yaml

[options.extras_require]
dev =
    pre-commit
    scipy-stubs
testing =
    py
    pyqt5
    pytest
    pytest-cov
    pytest-mock
    pytest-qt<4.1.0  # https://pytest-qt.readthedocs.io/en/latest/
    tox

[options.package_data]
* = *.yaml
